--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=sgesc07102012
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.show-sql=true
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
